add remote video

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,7 @@
 <ng-container *ngFor="let c of connections">
-  <video width="100" #clientFeed controls autoplay id="{{c.userId}}">
+  <video #videoStreams width="100" height="100" autoplay style="border: 1px solid blue;" [id]="c.sessionId">
   </video>
 </ng-container>
 
-<video #userWindow style="border: 1px solid red;" width="400" height="300">
+<video #userWindow style="border: 1px solid red;" width="100" height="100">
 </video>
-<button *ngIf="!screenCapEnabled" (click)="enableScreenCapture()">Screen Cap</button>
