--- a/streamer/src/app/app.component.html
+++ b/streamer/src/app/app.component.html
@@ -3,5 +3,5 @@
   </video>
 </ng-container>
 
-<video #userWindow style="border: 1px solid red;" width="100" height="100">
-</video>
+<!-- <video #userWindow style="border: 1px solid red;" width="100" height="100">
+</video> -->
