--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,5 +3,11 @@
   </video>
 </ng-container> -->
 
-<video #userWindow style="border: 1px solid red;" width="100" height="100">
-</video>
+<div class="video-container">
+  <video #userWindow style="border: 1px solid red;">
+  </video>
+  <div *ngIf="EnableVideoToggle" class="controller-button" (click)="nextSource()">
+
+  </div>
+</div>
+
