--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -4,7 +4,7 @@
 </ng-container> -->
 
 <div class="video-container" (click)="nextSource()">
-  <video #userWindow style="border: 1px solid red;">
+  <video #userWindow autoplay>
   </video>
 </div>
 
