update front end

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -6,21 +6,11 @@
     height: 98%; 
     overflow: hidden;
     z-index: 0;
-
-    .controller-button {
-        z-index: 1;
-        position: absolute;
-        top: 3em;
-        right: 3em;
-        width: 3em;
-        height: 3em;
-        border: 1px solid green;
-    }
   }
   .video-container video {
     /* Make video to at least 100% wide and tall */
-    // min-width: 100%; 
-    // min-height: 100%; 
+    min-width: 100%; 
+    min-height: 100%; 
   
     /* Setting width & height to auto prevents the browser from stretching or squishing the video */
     width: auto;
