--- a/streamer/src/app/app.component.html
+++ b/streamer/src/app/app.component.html
@@ -1,7 +1,5 @@
 <ng-container *ngFor="let c of connections">
-  <video #videoStreams width="100" height="100" autoplay style="border: 1px solid blue;" [id]="c.sessionId">
+  <video #videoStreams width="100" height="100" autoplay [id]="c.sessionId">
   </video>
 </ng-container>
 
-<!-- <video #userWindow style="border: 1px solid red;" width="100" height="100">
-</video> -->
