revert to prev commit

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,7 +3,11 @@
   </video>
 </ng-container> -->
 
-<div class="video-container" (click)="nextSource()">
-  <video #userWindow autoplay>
+<div class="video-container">
+  <video #userWindow style="border: 1px solid red;">
   </video>
+  <div *ngIf="EnableVideoToggle" class="controller-button" (click)="nextSource()">
+
+  </div>
 </div>
+
