--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -6,7 +6,7 @@
 <div class="video-container">
   <video #userWindow>
   </video>
-  <div *ngIf="EnableVideoToggle" class="controller-button" (click)="nextSource()">
+  <div *ngIf="EnableVideoToggle" class="controller-button">
 
   </div>
 </div>
