--- a/streamer/src/app/app.component.html
+++ b/streamer/src/app/app.component.html
@@ -1,4 +1,6 @@
-<ng-container *ngFor="let c of connections">
-  <video #videoStreams width="100" height="100" autoplay [id]="c.sessionId">
+<div class="grid-wrapper">
+  <div class="main-window">
+  </div>
+  <video *ngFor="let c of connections" #videoStreams autoplay [id]="c.sessionId">
   </video>
-</ng-container>
+</div>
