--- a/streamer/src/app/app.component.scss
+++ b/streamer/src/app/app.component.scss
@@ -15,8 +15,18 @@
         grid-column: 1 / 4;
         grid-row: 1 / 4;
         background: grey;
-        min-height: 20px;
-        min-width: 20px;
+        position: relative;
+        overflow: hidden;
+
+        iframe {
+            position: absolute;
+            overflow: hidden;
+            top: 50%;
+            left: 50%;
+            width: 100%;
+            height: 100%;
+            transform: translate(-50%, -50%);
+        }
     }
 }
 
