--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,21 +1,36 @@
-<h2>Welcome to stream camera client</h2>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Stream Camera Client</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <mat-form-field appearance="fill" style="width: 90vw;">
+      <mat-label>Name</mat-label>
+      <input matInput type="text" [(ngModel)]="name" [ngModelOptions]="{standalone: true}">
+    </mat-form-field>
+    <br/>
+    
+    <mat-form-field appearance="fill" style="width: 90vw;">
+      <mat-label>Current Channel</mat-label>
+      <input matInput type="text" [(ngModel)]="streamUrl" [ngModelOptions]="{standalone: true}">
+    </mat-form-field>
+    <br/>
+    <button mat-raised-button (click)="updateStream()">Update Stream</button>
+    
+    <br/>
 
-<mat-form-field appearance="fill" style="width: 90vw;">
-  <mat-label>Name</mat-label>
-  <input matInput type="text" [(ngModel)]="name">
-</mat-form-field>
-<br/>
+    <div style="margin-top: 2em; height: 40vh; background: rgb(211, 211, 211);">
+      <ng-container *ngFor="let m of messages">
+        <span style="font-style: italic;">{{ m.name || 'anonymous' }}</span><span> : {{ m.message }}</span><br>
+      </ng-container>
+    </div>
+    
+    <form (submit)="sendMessage()" style="margin-top: 2em;">
+      <mat-form-field appearance="fill" style="width: 60vw;">
+        <mat-label>Message</mat-label>
+        <input matInput type="text" [(ngModel)]="message" [ngModelOptions]="{standalone: true}">
+      </mat-form-field>
+      <button mat-raised-button type="submit" style="margin-left: 1em;">Send</button>
+    </form>
 
-<mat-form-field appearance="fill" style="width: 90vw;">
-  <mat-label>Current Channel</mat-label>
-  <input matInput type="text" [(ngModel)]="streamUrl">
-</mat-form-field>
-<br/>
-<button mat-raised-button (click)="updateStream()">Update Stream</button>
-
-<mat-form-field appearance="fill" style="width: 90vw;">
-  <mat-label>Message</mat-label>
-  <input matInput type="text" [(ngModel)]="message">
-</mat-form-field>
-<br/>
-<button mat-raised-button (click)="sendMessage()">Send Message</button>
+  </mat-card-content>
+</mat-card>
