--- a/streamer/src/app/app.component.scss
+++ b/streamer/src/app/app.component.scss
@@ -8,8 +8,6 @@
     height: 100vh;
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
 
     .main-window {
         grid-column: 1 / 4;
@@ -28,6 +26,16 @@
             transform: translate(-50%, -50%);
         }
     }
+}
+
+.stream-enabled {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+}
+
+.party-mode {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
 }
 
 video {
