--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,34 +3,53 @@
     <mat-card-title>Stream Camera Client</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <mat-form-field appearance="fill" style="width: 90vw;">
+    <mat-form-field appearance="fill" style="width: 90vw">
       <mat-label>Name</mat-label>
-      <input matInput type="text" [(ngModel)]="name" [ngModelOptions]="{standalone: true}">
+      <input
+        matInput
+        type="text"
+        [(ngModel)]="name"
+        [ngModelOptions]="{ standalone: true }"
+      />
     </mat-form-field>
-    <br/>
-    
-    <mat-form-field appearance="fill" style="width: 90vw;">
-      <mat-label>Current Channel</mat-label>
-      <input matInput type="text" [(ngModel)]="streamUrl" [ngModelOptions]="{standalone: true}">
-    </mat-form-field>
-    <br/>
-    <button mat-raised-button (click)="updateStream()">Update Stream</button>
-    
-    <br/>
+    <br />
 
-    <div style="margin-top: 2em; height: 40vh; background: rgb(211, 211, 211);">
+    <mat-form-field appearance="fill" style="width: 90vw">
+      <mat-label>Current Channel</mat-label>
+      <input
+        matInput
+        type="text"
+        [(ngModel)]="streamUrl"
+        [ngModelOptions]="{ standalone: true }"
+      />
+    </mat-form-field>
+    <br />
+    <button mat-raised-button (click)="clearUrl()">Clear</button>
+    <button mat-raised-button (click)="updateStream()">Update Stream</button>
+
+    <br />
+
+    <div style="margin-top: 2em; height: 40vh; background: rgb(211, 211, 211)">
       <ng-container *ngFor="let m of messages">
-        <span style="font-style: italic;">{{ m.name || 'anonymous' }}</span><span> : {{ m.message }}</span><br>
+        <span style="font-style: italic">{{ m.name || "anonymous" }}</span
+        ><span> : {{ m.message }}</span
+        ><br />
       </ng-container>
     </div>
-    
-    <form (submit)="sendMessage()" style="margin-top: 2em;">
-      <mat-form-field appearance="fill" style="width: 60vw;">
-        <mat-label>Message</mat-label>
-        <input matInput type="text" [(ngModel)]="message" [ngModelOptions]="{standalone: true}">
-      </mat-form-field>
-      <button mat-raised-button type="submit" style="margin-left: 1em;">Send</button>
-    </form>
 
+    <form (submit)="sendMessage()" style="margin-top: 2em">
+      <mat-form-field appearance="fill" style="width: 60vw">
+        <mat-label>Message</mat-label>
+        <input
+          matInput
+          type="text"
+          [(ngModel)]="message"
+          [ngModelOptions]="{ standalone: true }"
+        />
+      </mat-form-field>
+      <button mat-raised-button type="submit" style="margin-left: 1em">
+        Send
+      </button>
+    </form>
   </mat-card-content>
 </mat-card>
