--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -32,3 +32,19 @@
     left: 50%;
     transform: translate(-50%,-50%);
   }
+
+  .chat-wrapper {
+    margin-top: 2em;
+    height: 40vh;
+    background: rgb(211, 211, 211);
+    position: relative;
+    overflow: hidden;
+  }
+
+  .chat-box {
+    position: absolute;
+    width: 100%;
+    word-break: normal; 
+    overflow: hidden;
+    bottom: 0.5em;
+  }
