--- a/streamer/src/app/app.component.scss
+++ b/streamer/src/app/app.component.scss
@@ -47,8 +47,29 @@ video {
     object-fit: cover;
 }
 
+.chat-wrapper {
+    background: rgb(3, 3, 3);
+    position: relative;
+    display: grid;
+    grid-column: 4 / 5;
+    grid-row: 4 / 5;
+    width: 100%;
+    height: 100%;
+    color: yellow;
+    overflow: hidden;
+  }
+
+  .chat-box {
+    position: absolute;
+    width: 100%;
+    overflow: hidden;
+    bottom: 0.5em;
+  }
+
+
 html, body, app-root {
     height: 100vh;
     width: 100%;
     margin: 0;
     }
+
